--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,10 @@
 {
   "explorePageLinkText": "Explore",
-  "collectionsPageLinkText": "Collections"
+  "collectionsPageLinkText": "Collections",
+  "aboutPageLinkText": "About",
+  "contactPageLinkText": "Contact",
+  "helpPageLinkText": "Help",
+  "brandPageLinkText": "Brand",
+  "termOfServicePageLinkText": "Term of Service",
+  "businessPageLinkText": "Business"
 }
