main banner added

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,9 @@
   "helpPageLinkText": "Help",
   "brandPageLinkText": "Brand",
   "termOfServicePageLinkText": "Term of Service",
-  "businessPageLinkText": "Business"
+  "businessPageLinkText": "Business",
+  "soonDropText": "Soon drop",
+  "createdByText": "Created by",
+  "searchText": "Search",
+  "collectionText": "Collection"
 }
