--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -6,5 +6,9 @@
   "helpPageLinkText": "Besoin d'aide",
   "brandPageLinkText": "Marque",
   "termOfServicePageLinkText": "Termes du service",
-  "businessPageLinkText": "Affaire"
+  "businessPageLinkText": "Affaire",
+  "soonDropText": "Bientôt disponible",
+  "createdByText": "Crée par",
+  "searchText": "Rechercher",
+  "collectionText": "Collection"
 }
