wallet connect added with nested layout setup

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "connectWalletText": "Connect wallet",
   "mainBannerMessageText": "Discover New NFTs",
   "viewText": "View",
-  "createCollectionText": "Create a collection"
+  "createCollectionText": "Create a collection",
+  "usersText": "Users"
 }
