--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -18,5 +18,6 @@
   "connectWalletText": "Connecter votre portemonnaie",
   "mainBannerMessageText": "Découvrir de nouveaux NFTs",
   "viewText": "Voir",
-  "createCollectionText": "Créer une collection"
+  "createCollectionText": "Créer une collection",
+  "usersText": "Utilisateurs"
 }
