connect to wallet done and explore page UI almost finished

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,7 @@
   "mainBannerMessageText": "Discover New NFTs",
   "viewText": "View",
   "createCollectionText": "Create a collection",
-  "usersText": "Users"
+  "usersText": "Users",
+  "filterByText": "Filter by",
+  "priceText": "price"
 }
